--- a/translations/kangyur/placeholders/062-005_toh205-the_sutra_on_the_woman_in_the_city_who_hangs_up_washing.xml
+++ b/translations/kangyur/placeholders/062-005_toh205-the_sutra_on_the_woman_in_the_city_who_hangs_up_washing.xml
@@ -4,15 +4,20 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">grong khyer gyis 'tsho ba'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">nāgarāvalambikāsūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra on the Woman in the City who Hangs Up Washing</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa grong khyer gyis 'tsho ba zhes bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">nāgarāvalambikāsūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">grong khyer gyis 'tsho ba'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryanāgarāvalambikā­nāmamahāyānasūtra</title>
-                <author role="translatorMain" ref="contributors.xml#team-27"/>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa grong khyer gyis 'tsho ba zhes bya ba theg pa chen po'i mdo</title>
+                <author role="translatorMain" ref="eft:team-27"/>
+                <consultant role="dharmaMaster" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</consultant>
+                <author role="translatorEng" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</author>
+                <author role="translatorEng" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</author>
+                <consultant role="projectManager" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</consultant>
+                <editor role="projectEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.3 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -32,9 +37,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-14T15:14:38.244Z" user="admin">14/11/2022 15:14:38</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-11-14T15:14:32.649Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-11-14T15:14:32.649Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-12-02T13:41:37.495Z" user="admin">02/12/2022 13:41:37</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-11-14T15:14:32.649Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-11-14T15:14:32.649Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-12-02T13:41:31.882Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
