--- a/translations/kangyur/placeholders/091-020_toh623,1015-the_incantation_for_assuaging_all_illnesses.xml
+++ b/translations/kangyur/placeholders/091-020_toh623,1015-the_incantation_for_assuaging_all_illnesses.xml
@@ -6,24 +6,28 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">nad thams cad rab tu zhi byed kyi gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">sarvarogapraśamanī dhāraṇī</title>
-                <title type="mainTitle" xml:lang="en">The Incantation for Assuaging All Illnesses</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī for Assuaging All Illnesses</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa nad thams cad rab tu zhi bar byed pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryasarvarogapraśamanīnāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">nad rab tu zhi byed kyi gzungs/</title>
-                <title type="otherTitle" xml:lang="en">The Incantation for Assuaging Illnesses</title>
+                <title type="otherTitle" xml:lang="en">The Dhāraṇī for Assuaging Illnesses</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa nad rab tu zhi bar byed pa'i gzungs/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-091-020"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh623" type="text">
                     <ref>Toh 623</ref>
                     <biblScope>vol.91, ff.62v-62v(pp.124-124)</biblScope>
-                    <location count-pages="1">
-                        <start volume="91" page="126"/>
-                        <end volume="91" page="126"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="91" start-page="124" end-page="124"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12357" work="W22084"/>
@@ -31,16 +35,15 @@
                 <bibl key="toh1015" type="text">
                     <ref>Toh 1015</ref>
                     <biblScope>vol.101, ff.180v-180v(pp.360-360)</biblScope>
-                    <location count-pages="1">
-                        <start volume="101" page="362"/>
-                        <end volume="101" page="362"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="101" start-page="360" end-page="360"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12778" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:07:43 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-15T14:11:52.884Z" user="admin">15/12/2022 14:11:52</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:11:48.508Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:11:48.508Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
