--- a/translations/kangyur/placeholders/091-020_toh623,1015-the_incantation_for_assuaging_all_illnesses.xml
+++ b/translations/kangyur/placeholders/091-020_toh623,1015-the_incantation_for_assuaging_all_illnesses.xml
@@ -4,18 +4,20 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">nad thams cad rab tu zhi byed kyi gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">sarvarogapraśamanī dhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī for Assuaging All Illnesses</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa nad thams cad rab tu zhi bar byed pa'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryasarvarogapraśamanīnāmadhāraṇī</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">nad rab tu zhi byed kyi gzungs/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">sarvarogapraśamanī dhāraṇī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">nad thams cad rab tu zhi byed kyi gzungs/</title>
                 <title type="otherTitle" xml:lang="en">The Dhāraṇī for Assuaging Illnesses</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">āryasarvarogapraśamanīnāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa nad rab tu zhi bar byed pa'i gzungs/</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa nad thams cad rab tu zhi bar byed pa'i gzungs/</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">nad rab tu zhi byed kyi gzungs/</title>
+                <author role="translatorMain" ref="eft:team-40"/>
+                <author role="translatorEng" ref="eft:person-74">Ryan Damron</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -43,7 +45,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-15T14:11:52.884Z" user="admin">15/12/2022 14:11:52</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:11:48.508Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:11:48.508Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-15T14:12:25.117Z" user="admin">15/12/2022 14:12:25</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:11:48.508Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:11:48.508Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-15T14:12:23.609Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
