--- a/translations/kangyur/placeholders/091-022_toh625,1016-the_incantation_for_assuaging_epidemic_fevers.xml
+++ b/translations/kangyur/placeholders/091-022_toh625,1016-the_incantation_for_assuaging_epidemic_fevers.xml
@@ -6,23 +6,27 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">rims nad rab tu zhi byed kyi gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">jvarapraśamanī dhāraṇī</title>
-                <title type="mainTitle" xml:lang="en">The Incantation for Assuaging Epidemic Fevers</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī for Assuaging Epidemic Fevers</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rims nad rab tu zhi bar byed pa zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryajvarapraśamanīnāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rims nad rab tu zhi bar byed pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rims nad rab tu zhi bar byed pa zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryajvarapraśamanīnāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-091-022"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh625" type="text">
                     <ref>Toh 625</ref>
                     <biblScope>vol.91, ff.62v-63r(pp.124-125)</biblScope>
-                    <location count-pages="2">
-                        <start volume="91" page="126"/>
-                        <end volume="91" page="127"/>
+                    <location work="UT4CZ5369" count-pages="2">
+                        <volume number="91" start-page="124" end-page="125"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12359" work="W22084"/>
@@ -30,16 +34,15 @@
                 <bibl key="toh1016" type="text">
                     <ref>Toh 1016</ref>
                     <biblScope>vol.101, ff.180v-181r(pp.360-361)</biblScope>
-                    <location count-pages="2">
-                        <start volume="101" page="362"/>
-                        <end volume="101" page="363"/>
+                    <location work="UT4CZ5369" count-pages="2">
+                        <volume number="101" start-page="360" end-page="361"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12779" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:07:44 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-15T14:15:04.536Z" user="admin">15/12/2022 14:15:04</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:15:00.175Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:15:00.175Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
