--- a/translations/kangyur/placeholders/091-023_toh626,1019-the_incantation_for_assuaging_smallpox.xml
+++ b/translations/kangyur/placeholders/091-023_toh626,1019-the_incantation_for_assuaging_smallpox.xml
@@ -6,20 +6,24 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">'brum nad zhi bar 'gyur ba'i gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
-                <title type="mainTitle" xml:lang="en">The Incantation for Assuaging Smallpox</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī for Assuaging Smallpox</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'brum bu'i nad zhi bar 'gyur ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'brum bu'i nad zhi bar byed pa'i gzungs/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-091-023"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh626" type="text">
                     <ref>Toh 626</ref>
                     <biblScope>vol.91, ff.63r-63r(pp.125-125)</biblScope>
-                    <location count-pages="1">
-                        <start volume="91" page="127"/>
-                        <end volume="91" page="127"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="91" start-page="125" end-page="125"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12360" work="W22084"/>
@@ -27,16 +31,15 @@
                 <bibl key="toh1019" type="text">
                     <ref>Toh 1019</ref>
                     <biblScope>vol.101, ff.181v-181v(pp.362-362)</biblScope>
-                    <location count-pages="1">
-                        <start volume="101" page="364"/>
-                        <end volume="101" page="364"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="101" start-page="362" end-page="362"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12782" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:07:48 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-15T14:16:08.944Z" user="admin">15/12/2022 14:16:08</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:16:04.575Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:16:04.575Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
