--- a/translations/kangyur/placeholders/091-023_toh626,1019-the_incantation_for_assuaging_smallpox.xml
+++ b/translations/kangyur/placeholders/091-023_toh626,1019-the_incantation_for_assuaging_smallpox.xml
@@ -4,14 +4,16 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">'brum nad zhi bar 'gyur ba'i gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī for Assuaging Smallpox</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">'brum nad zhi bar 'gyur ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'brum bu'i nad zhi bar 'gyur ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'brum bu'i nad zhi bar byed pa'i gzungs/</title>
+                <author role="translatorMain" ref="eft:team-40"/>
+                <author role="translatorEng" ref="eft:person-74">Ryan Damron</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -39,7 +41,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-15T14:16:08.944Z" user="admin">15/12/2022 14:16:08</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:16:04.575Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:16:04.575Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-15T14:16:45.218Z" user="admin">15/12/2022 14:16:45</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:16:04.575Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:16:04.575Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-15T14:16:43.711Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
