--- a/translations/kangyur/placeholders/096-032_toh783,1060-the_incantation_for_assuaging_tumors.xml
+++ b/translations/kangyur/placeholders/096-032_toh783,1060-the_incantation_for_assuaging_tumors.xml
@@ -6,18 +6,22 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">skran zhi ba'i gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
-                <title type="mainTitle" xml:lang="en">The Incantation for Assuaging Tumors</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī for Assuaging Tumors</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-096-032"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh783" type="text">
                     <ref>Toh 783</ref>
                     <biblScope>vol.96, ff.114r-114r(pp.227-227)</biblScope>
-                    <location count-pages="1">
-                        <start volume="96" page="229"/>
-                        <end volume="96" page="229"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="96" start-page="227" end-page="227"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12529" work="W22084"/>
@@ -25,16 +29,15 @@
                 <bibl key="toh1060" type="text">
                     <ref>Toh 1060</ref>
                     <biblScope>vol.101, ff.190r-190r(pp.379-379)</biblScope>
-                    <location count-pages="1">
-                        <start volume="101" page="381"/>
-                        <end volume="101" page="381"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="101" start-page="379" end-page="379"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12824" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:08:32 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-15T14:19:23.951Z" user="admin">15/12/2022 14:19:23</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:19:19.59Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:19:19.59Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
