--- a/translations/kangyur/placeholders/096-047_toh798,1054-the_incantation_for_treating_wounds.xml
+++ b/translations/kangyur/placeholders/096-047_toh798,1054-the_incantation_for_treating_wounds.xml
@@ -6,20 +6,24 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">rma 'byor bar byed pa'i gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
-                <title type="mainTitle" xml:lang="en">The Incantation for Treating Wounds</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī for Treating Wounds</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rma 'byor bar byed pa zhes bya ba'i gzungs sngags/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rma 'byor bar byed pa zhes bya ba'i gzungs sngags/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-096-047"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh798" type="text">
                     <ref>Toh 798</ref>
                     <biblScope>vol.96, ff.116v-116v(pp.232-232)</biblScope>
-                    <location count-pages="1">
-                        <start volume="96" page="234"/>
-                        <end volume="96" page="234"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="96" start-page="232" end-page="232"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12544" work="W22084"/>
@@ -27,16 +31,15 @@
                 <bibl key="toh1054" type="text">
                     <ref>Toh 1054</ref>
                     <biblScope>vol.101, ff.189r-189r(pp.377-377)</biblScope>
-                    <location count-pages="1">
-                        <start volume="101" page="379"/>
-                        <end volume="101" page="379"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="101" start-page="377" end-page="377"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12817" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:08:25 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-15T14:23:27.227Z" user="admin">15/12/2022 14:23:27</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:23:22.852Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:23:22.852Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
