--- a/translations/kangyur/placeholders/096-047_toh798,1054-the_incantation_for_treating_wounds.xml
+++ b/translations/kangyur/placeholders/096-047_toh798,1054-the_incantation_for_treating_wounds.xml
@@ -4,14 +4,15 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">rma 'byor bar byed pa'i gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī for Treating Wounds</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">rma 'byor bar byed pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rma 'byor bar byed pa zhes bya ba'i gzungs sngags/</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">rma 'byor bar byed pa zhes bya ba'i gzungs sngags/</title>
+                <author role="translatorMain" ref="eft:team-40"/>
+                <author role="translatorEng" ref="eft:person-74">Ryan Damron</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -39,7 +40,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-15T14:23:27.227Z" user="admin">15/12/2022 14:23:27</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:23:22.852Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:23:22.852Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-15T14:23:58.575Z" user="admin">15/12/2022 14:23:58</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:23:22.852Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:23:22.852Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-15T14:23:57.07Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
