--- a/translations/kangyur/placeholders/096-049_toh800,1056-the_mantra_that_dispels_bile_diseases.xml
+++ b/translations/kangyur/placeholders/096-049_toh800,1056-the_mantra_that_dispels_bile_diseases.xml
@@ -8,16 +8,20 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="en">The Mantra that Dispels Bile Diseases</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-096-049"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh800" type="text">
                     <ref>Toh 800</ref>
                     <biblScope>vol.96, ff.116v-116v(pp.232-232)</biblScope>
-                    <location count-pages="1">
-                        <start volume="96" page="234"/>
-                        <end volume="96" page="234"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="96" start-page="232" end-page="232"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12546" work="W22084"/>
@@ -25,16 +29,15 @@
                 <bibl key="toh1056" type="text">
                     <ref>Toh 1056</ref>
                     <biblScope>vol.101, ff.189v-189v(pp.378-378)</biblScope>
-                    <location count-pages="1">
-                        <start volume="101" page="380"/>
-                        <end volume="101" page="380"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="101" start-page="378" end-page="378"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12819" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:08:28 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-15T14:25:40.722Z" user="admin">15/12/2022 14:25:40</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:25:36.33Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:25:36.33Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
