--- a/translations/kangyur/placeholders/096-049_toh800,1056-the_mantra_that_dispels_bile_diseases.xml
+++ b/translations/kangyur/placeholders/096-049_toh800,1056-the_mantra_that_dispels_bile_diseases.xml
@@ -4,12 +4,14 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">mkhris pa'i nad sel ba'i sngags/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="en">The Mantra that Dispels Bile Diseases</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">mkhris pa'i nad sel ba'i sngags/</title>
+                <author role="translatorMain" ref="eft:team-40"/>
+                <author role="translatorEng" ref="eft:person-74">Ryan Damron</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -37,7 +39,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-15T14:25:40.722Z" user="admin">15/12/2022 14:25:40</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:25:36.33Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:25:36.33Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-15T14:26:14.181Z" user="admin">15/12/2022 14:26:14</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:25:36.33Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:25:36.33Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-15T14:26:12.663Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
